water transport fare charts

--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -946,7 +946,7 @@
         <section class="clearfix stat-row">
           <h2 class="header-for-columns">
             <a class="permalink">
-              <strong>Air Transport Fare Watch</strong><i class="fa fa-link"></i></a>
+              <strong>Motorcycle Fare Watch</strong><i class="fa fa-link"></i></a>
           </h2>
           <div class="column-full">
               <div id="chart-column-others-transport_motorcycle_fare-2019"
@@ -1080,6 +1080,42 @@
           <div class="column-full stat-row">
               <div id="chart-column-others-transport_air_fare-2016"
                     data-chart-title="Air fare charge 2016"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.transport_water_fare.is_missing %}
+        <section class="clearfix stat-row">
+          <h2 class="header-for-columns">
+            <a class="permalink">
+              <strong>Water Transport Fare Watch</strong><i class="fa fa-link"></i></a>
+          </h2>
+          <div class="column-full">
+              <div id="chart-column-others-transport_water_fare-2019"
+                   data-chart-title="Water fare charge 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-transport_water_fare-2018"
+                    data-chart-title="Water fare charge 2018"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-transport_water_fare-2017"
+                    data-chart-title="Water fare charge 2017"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-transport_water_fare-2016"
+                    data-chart-title="Water fare charge 2016"
                     data-stat-type="number"
                     data-source-title="National Bureau of Statistics, 2019"
                     data-source-link="https://nigerianstat.gov.ng/resource"></div>
