--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -731,6 +731,17 @@
     <article id="others" class="clearfix">
       <header class="section-contents"><h1>Others</h1></header>
       <div class="section-container">
+          {% if not others.enterprise_registered.is_missing %}
+          <section class="clearfix stat-row">
+            <div class="column-full">
+                <div id="chart-grouped_column-others-enterprise_registered"
+                     data-chart-title="Number of Small and Medium Enterprises registered by State, 2010, 2013 and 2017"
+                     data-stat-type="number"
+                     data-source-title="National Bureau of Statistics, 2018"
+                     data-source-link="https://nigerianstat.gov.ng/download/966"></div>
+              </div>
+          </section>
+          {% endif %}
         {% if not others.employment_in_civil_services.is_missing %}
         <section class="clearfix stat-row">
           <div class="column-full">
@@ -766,12 +777,19 @@
         {% endif %}
         {% if not others.mineral_production.is_missing %}
         <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-half">
               <div id="chart-column-others-mineral_production"
                    data-chart-title="Mineral Production 2016 - 2018"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2018"
                    data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-column-others-prepaid_metres"
+                   data-chart-title="Number of consumers with prepaid meters Q4 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/866"></div>
             </div>
         </section>
         {% endif %}
@@ -830,21 +848,21 @@
             </div>
         </section>
         {% endif %}
-        {% if not others.postal_data.is_missing %}
+        {% if not others.postal_data.is_missing or not others.postal_services.is_missing %}
         <section class="clearfix stat-row">
-          <div class="column-half">
+          <div class="column-third">
               <div id="chart-column-others-postal_data"
                    data-chart-title="Total number of Annual Postal Services Data"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2016"
                    data-source-link="https://nigerianstat.gov.ng/download/522"></div>
             </div>
-            <div class="column-half">
-              <div id="chart-column-others-prepaid_metres"
-                   data-chart-title="Number of consumers with prepaid meters Q4 2018"
+            <div class="column-two-thirds">
+              <div id="chart-column-others-postal_services"
+                   data-chart-title="Annual Postal Services Data 2018"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2018"
-                   data-source-link="https://nigerianstat.gov.ng/download/866"></div>
+                   data-source-link="https://nigerianstat.gov.ng/resource"></div>
             </div>
         </section>
         {% endif %}
@@ -1373,6 +1391,92 @@
           <div class="column-full stat-row">
               <div id="chart-column-others-lpg_price_5kg-2016"
                     data-chart-title="Gas in small cylinder (i.e 5kg) refilling price 2016"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.kerosene_price_litre.is_missing %}
+        <section class="clearfix stat-row">
+          <h2 class="header-for-columns">
+            <a class="permalink">
+              <strong>Kerosene Price Watch (One Litre)</strong><i class="fa fa-link"></i></a>
+          </h2>
+          <div class="column-full">
+              <div id="chart-column-others-kerosene_price_litre-2019"
+                   data-chart-title="Kerosene Price Watch (One Litre) 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_litre-2018"
+                    data-chart-title="Kerosene Price Watch (One Litre) 2018"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_litre-2017"
+                    data-chart-title="Kerosene Price Watch (One Litre) 2017"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_litre-2016"
+                    data-chart-title="Kerosene Price Watch (One Litre) 2016"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+            </div>
+            <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_litre-2015"
+                    data-chart-title="Kerosene Price Watch (One Litre) 2015"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.kerosene_price_gallon.is_missing %}
+        <section class="clearfix stat-row">
+          <h2 class="header-for-columns">
+            <a class="permalink">
+              <strong>Kerosene Price Watch (One Gallon)</strong><i class="fa fa-link"></i></a>
+          </h2>
+          <div class="column-full">
+              <div id="chart-column-others-kerosene_price_gallon-2019"
+                   data-chart-title="Kerosene Price Watch (One Gallon) 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_gallon-2018"
+                    data-chart-title="Kerosene Price Watch (One Gallon) 2018"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_gallon-2017"
+                    data-chart-title="Kerosene Price Watch (One Gallon) 2017"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_gallon-2016"
+                    data-chart-title="Kerosene Price Watch (One Gallon) 2016"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/resource"></div>
+            </div>
+            <div class="column-full stat-row">
+              <div id="chart-column-others-kerosene_price_gallon-2015"
+                    data-chart-title="Kerosene Price Watch (One Gallon) 2015"
                     data-stat-type="number"
                     data-source-title="National Bureau of Statistics, 2019"
                     data-source-link="https://nigerianstat.gov.ng/resource"></div>
