--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -723,6 +723,17 @@
             </div>
         </section>
         {% endif %}
+        {% if not finance.access_to_bank.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+            <div id="chart-column-finance-access_to_bank"
+                 data-chart-title="Sole Proprietorship with access to Bank Finance by State vs total Sole Proprietorship 2017" 
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2019"
+                data-source-link="https://nigerianstat.gov.ng/download/966"></div>
+              </div>
+          </section>
+        {% endif %}
       </div>
     </article>
   {% endif %}
@@ -731,11 +742,22 @@
     <article id="others" class="clearfix">
       <header class="section-contents"><h1>Others</h1></header>
       <div class="section-container">
-          {% if not others.enterprise_registered.is_missing %}
+          {% if not others.enterprise_registered.is_missing or not others.micro_enterprises.is_missing %}
           <section class="clearfix stat-row">
-            <div class="column-full">
+              <h2 class="header-for-columns">
+                  <a class="permalink">
+                    <strong>Enterprises Registered</strong><i class="fa fa-link"></i></a>
+                </h2>
+            <div class="column-two-thirds">
                 <div id="chart-grouped_column-others-enterprise_registered"
                      data-chart-title="Number of Small and Medium Enterprises registered by State, 2010, 2013 and 2017"
+                     data-stat-type="number"
+                     data-source-title="National Bureau of Statistics, 2018"
+                     data-source-link="https://nigerianstat.gov.ng/download/966"></div>
+              </div>
+              <div class="column-third">
+                <div id="chart-column-others-micro_enterprises"
+                     data-chart-title="Number of Micro Enterprises by State, 2013 & 2017"
                      data-stat-type="number"
                      data-source-title="National Bureau of Statistics, 2018"
                      data-source-link="https://nigerianstat.gov.ng/download/966"></div>
@@ -768,6 +790,53 @@
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2016"
                    data-source-link="https://nigerianstat.gov.ng/resource/"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.awareness_of_fed_gov_intiative.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-awareness_of_fed_gov_intiative"
+                   data-chart-title="Awareness of New Federal Government Initiatives by State 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/966"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.business_operation_equipment_source.is_missing or not others.business_reg_with_cac.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-half">
+              <div id="chart-column-others-business_operation_equipment_source"
+                   data-chart-title="Sources of Equipment for Business Operation 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/966"></div>
+            </div>
+            <div class="column-half">
+                <div id="chart-column-others-business_reg_with_cac"
+                     data-chart-title="Business establishement registered with Corporate Affairs Commission of Nigeria (CAC) vs Total Number of establishement  2017"
+                     data-stat-type="number"
+                     data-source-title="National Bureau of Statistics, 2018"
+                     data-source-link="https://nigerianstat.gov.ng/download/966"></div>
+              </div>
+        </section>
+        {% endif %}
+        {% if not others.benefit_from_smedan.is_missing or not others.awareness_of_smedan.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-half">
+              <div id="chart-column-others-benefit_from_smedan"
+                   data-chart-title="Benefit from Small and Medium Enterprises Development Agency of Nigeria (SMEDAN) Service by State 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/966"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-column-others-awareness_of_smedan"
+                   data-chart-title="Awareness of Small and Medium Enterprises Development Agency of Nigeria (SMEDAN) by State 2017 - (Number of enterprisess aware of SMED vs Total Number of Enterprises)"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/966"></div>
             </div>
         </section>
         {% endif %}
@@ -1509,6 +1578,54 @@
                     data-stat-type="number"
                     data-source-title="National Bureau of Statistics, 2019"
                     data-source-link="https://nigerianstat.gov.ng/download/978"></div>
+          </div>
+        </section>
+        {% endif %}
+        {% if not others.aviation_turbine_kerosene_volumes.is_missing %}
+        <section class="clearfix stat-row">
+          <h2 class="header-for-columns">
+            <a class="permalink">
+              <strong>Petroleum Products Importation And Consumption (Truck Out) 2018 - 2019</strong><i class="fa fa-link"></i></a>
+          </h2>
+          <div class="column-full">
+              <div id="chart-grouped_column-others-aviation_turbine_kerosene_volumes"
+                   data-chart-title="Aviation Turbine Kerosene in Millions Volume Litres"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/978"></div>
+          </div>
+          </section>
+          {% endif %}
+        {% if not others.household_kerosene_volumes.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-household_kerosene_volumes"
+                   data-chart-title="Household Kerosene in Millions Volume Litres"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/978"></div>
+          </div>
+        </section>
+        {% endif %}
+      {% if not others.automative_gas_oil_volumes.is_missing %}
+      <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-automative_gas_oil_volumes"
+                   data-chart-title="Automative Gas Oil in Millions Volume Litres"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/978"></div>
+          </div>
+        </section>
+        {% endif %}
+      {% if not others.premium_motor_spirit_volumes.is_missing %}
+      <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-premium_motor_spirit_volumes"
+                   data-chart-title="Premium Motor Spirit in Millions Volume Litres"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/978"></div>
           </div>
         </section>
         {% endif %}
