update about content

--- a/hurumap_ng/templates/about.html
+++ b/hurumap_ng/templates/about.html
@@ -5,25 +5,25 @@
 {% block content_container %}
     <div class="content container-narrowest clearfix">
         <h1>About {{ HURUMAP.name }}</h1>
-        <p>{{ HURUMAP.name }} was birthed from the partnership between Nigerian National Bureau of Statistics (NBS) and Code for Africa (CfA) in a bid to improve end users’ accessibility to NBS Data.</p>
+        <p>{{ HURUMAP.name }} stemmed from the partnership between Nigerian 
+            <a href="https://www.nigerianstat.gov.ng/" target="_blank" rel="noopener">National Bureau of Statistics</a> (NBS) and Code for Africa (CfA) 
+            to improve accessibility to NBS data.</p>
 
-        <p>Nigeria’s <a href="https://www.nigerianstat.gov.ng/" target="_blank" rel="noopener">National Bureau of Statistics</a> (NBS) 
-            came into being with the enactment of the Statistics Act 2007 following the merger of the Federal Office of Statistics (FOS) 
-            and the National Data Bank (NDB). The merger was to give the new agency a national outlook as the apex statistical agency in the country.</p>
+        <p>The NBS started with the enactment of the Statistics Act 2007 following the merger of the Federal Office of Statistics (FOS) and the National Data Bank (NDB).</p>
 
         <p>NBS is the authoritative source and custodian of official statistics in Nigeria, 
-            and coordinates statistical operations of the National Statistical System comprising all Federal Ministries, 
-            Departments and Agencies (MDAs), State Statistical Agencies (SSAs) and a number of other data providers.</p>
+            and coordinates statistical operations of the National Statistical System comprising all federal ministries, departments and agencies, state statistical agencies and a number of other data providers.</p>
 
-        <p>Code for Africa and its partners work together to facilitate free access to information, particularly for civil society and citizens.</p>
+        <p><a href="https://codeforafrica.org/" target="_blank" rel="noopener">Code for Africa</a> and its partners work together to facilitate free access to information, particularly for civil society and citizens.</p>
 
-        <p>NBS and Code for Africa are committed to the growth of the civic technology community by ensuring Nigeria’s data is readily accessible and freely available through the Nigeria HURUmap.</p>
+        <p>NBS and Code for Africa are committed to the growth of the civic technology community by ensuring the country’s 
+                <a href="https://openafrica.net/" target="_blank" rel="noopener">data</a> is readily accessible and freely available through the Nigeria HURUmap. </p>
             
         <p><em>What’s the data behind the story?</em></p>
 
-        <p>{{ HURUMAP.name }} provides the general public, particularly infomediaries like journalists and data enthusiasts, 
-            a friendly ‘plug & play’ toolkit for locating interactive data visualisations and embedding same in their storytelling. 
-            The project's underlying data is quality-checked and solely sourced from the National Bureau of Statistics (NBS). </p>
+        <p>{{ HURUMAP.name }} provides the public, particularly infomediaries such as journalists and data enthusiasts, 
+            a user-friendly plug and play toolkit for locating interactive data visualizations, and embedding the same in their storytelling. 
+            The project's underlying data is quality-checked and solely sourced from the NBS. </p>
 
         <p>The project is built on <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener">Wazimap</a>, an open source platform by <a href="https://openup.org.za/" target="_blank" rel="noopener">OpenUp</a> and <a href="http://www.mediamonitoringafrica.org/" target="_blank" rel="noopener">Media Monitoring Africa</a> for making census data more understandable.</p>
 
