--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -1283,7 +1283,7 @@
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-column-others-diesel_price-2019"
-                   data-chart-title="Desel Price Jan to Dec 2019"
+                   data-chart-title="Diesel Price Jan to Dec 2019"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2019"
                    data-source-link="https://nigerianstat.gov.ng/download/921"></div>
@@ -1304,7 +1304,7 @@
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-column-others-diesel_price-2018"
-                   data-chart-title="Desel Price Jan to Dec 2018"
+                   data-chart-title="Diesel Price Jan to Dec 2018"
                    data-source-title="National Bureau of Statistics, 2019"
                    data-source-link="https://nigerianstat.gov.ng/download/921"></div>
             </div>
@@ -1325,7 +1325,7 @@
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-column-others-diesel_price-2017"
-                   data-chart-title="Desel Price Jan to Dec 2017"
+                   data-chart-title="Diesel Price Jan to Dec 2017"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2019"
                    data-source-link="https://nigerianstat.gov.ng/download/921"></div>
@@ -1347,7 +1347,7 @@
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-column-others-diesel_price-2016"
-                   data-chart-title="Desel Price Jan to Dec 2016"
+                   data-chart-title="Diesel Price Jan to Dec 2016"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2019"
                    data-source-link="https://nigerianstat.gov.ng/download/921"></div>
@@ -1358,7 +1358,7 @@
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-column-others-diesel_price-2015"
-                   data-chart-title="Desel Price Jan to Dec 2015"
+                   data-chart-title="Diesel Price Jan to Dec 2015"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2019"
                    data-source-link="https://nigerianstat.gov.ng/download/921"></div>
