fix chart title & source

--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -543,10 +543,10 @@
         {% if not drugs.drug_counselling.is_missing %}
           <div class="column-half">
               <div id="chart-column-drugs-drug_counselling"
-                   data-chart-title="Quantity of Narcotic Drugs Seized (kg) 2012-2016"
+                   data-chart-title="Number of drug-related counselling conducted in Nigeria by gender (2018)"
                    data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2016"
-                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/881"></div>
             </div>
         {% endif %}
         {% if not drugs.drug_convictions.is_missing %}
