update source link hurumap land

--- a/hurumap_land/templates/profile/profile_detail.html
+++ b/hurumap_land/templates/profile/profile_detail.html
@@ -823,7 +823,7 @@
             <div class="column-two-thirds">
               <div id="chart-histogram-redistributionandrestitution-hectarestransferredperprovincebyyear"
                    data-chart-title="Hectares transferred in the Redistributiton Programme from 2009/2010 to 2017/2018"
-                   data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                   data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                    data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
             </div>
           {% endif %} <!-- end if -->
@@ -846,8 +846,8 @@
             <div class="column-half">
               <div id="chart-pie-redistributionandrestitution-redistributedlandusebreakdown"
                    data-stat-type="percentage"
-                   data-chart-title="Redistribution Programme Statistic, Percent land use breakdown year 2017/2018"
-                   data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                   data-chart-title="Redistribution Programme: Percent land use breakdown (2017/2018)"
+                   data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                    data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
             </div>
           {% endif %} <!-- end if -->
@@ -860,8 +860,8 @@
           {% if not redistributionandrestitution.redistributeprogrammeprojectsbyyear.is_missing %}
             <div class="column-two-thirds">
               <div id="chart-column-redistributionandrestitution-redistributeprogrammeprojectsbyyear"
-                   data-chart-title="Projects transferred through Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
-                   data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                   data-chart-title="Projects transferred through Redistribution Programme FY 2009/2010 to 2017/2018"
+                   data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                    data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
             </div>
           {% endif %} <!-- end if -->
@@ -873,8 +873,8 @@
           {% if not redistributionandrestitution.redistributeprogrammebeneficiariesbyyear.is_missing %}
             <div class="column-two-thirds">
               <div id="chart-column-redistributionandrestitution-redistributeprogrammebeneficiariesbyyear"
-                   data-chart-title="Beneficiaries of Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
-                   data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                   data-chart-title="Beneficiaries in Redistribution Programme FY 2009/2010 to 2017/2018"
+                   data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                    data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
             </div>
           {% endif %} <!-- end if -->
@@ -886,8 +886,8 @@
           </div>
           <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-redistributeprogrammehouseholdsbyyear"
-                 data-chart-title="Households Benefitted from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Households that Benefitted from Redistribution Programme FY 2009/2010 to 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
@@ -897,8 +897,8 @@
           </div>
           <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-femalepartybenefited"
-                 data-chart-title="Number of female benefited from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Number of females who benefited from the Redistribution Programme FY 2009/2010 to 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
@@ -908,8 +908,8 @@
           </div>
           <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-disabledpeoplepartybenefited"
-                 data-chart-title="Number of disabled people benefited from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Number of disabled people who benefited from Redistribution Programme FY 2009/2010 to 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
@@ -919,8 +919,8 @@
           </div>
           <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-youthpartybenefited"
-                 data-chart-title="Number of youth benefited from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Number of youth who benefited from Redistribution Programme FY 2009/2010 to 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
 
@@ -939,8 +939,8 @@
           </div>
           <div class="column-two-thirds">
             <div id="chart-histogram-redistributionandrestitution-hectaresacquiredrestitution"
-                 data-chart-title="Hectares Acquired in the Restitution Programme in the Financial Year 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Hectares Acquired in Restitution Programme FY 2009/2010 to 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
@@ -950,8 +950,8 @@
           </div>
           <div class="column-two-thirds">
             <div id="chart-histogram-redistributionandrestitution-householdsrestitution"
-                 data-chart-title="Households benefited in the Restitution Programme from 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Households that benefited in the Restitution Programme from 2009/2010 to 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
@@ -962,7 +962,7 @@
           <div class="column-two-thirds">
             <div id="chart-histogram-redistributionandrestitution-beneficiariesrestitution"
                  data-chart-title="Beneficiaries in the Restitution Programme from 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
@@ -972,28 +972,28 @@
           </div>
           <div class="column-two-thirds">
             <div id="chart-histogram-redistributionandrestitution-femaleheadedhouseholdsrestitution"
-                 data-chart-title="Number of female headed households restitution Programme from 2009/2010 to 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Number of female-headed households in Restitution Programme from 2009/2010 to 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
         <section class="clearfix stat-row">
           <div class="column-third">
             <div id="chart-histogram-redistributionandrestitution-financialcompensationrestitution"
-                 data-chart-title="Financial Compensation in Rands (ZAR), Restitution Programme in 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Financial Compensation in Rands (ZAR), Restitution Programme 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
           <div class="column-third">
             <div id="chart-histogram-redistributionandrestitution-disabilitiesrestitution"
-                 data-chart-title="People with disabilities benefited in Restitution Programme in 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="People with disabilities who benefited in Restitution Programme 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
           <div class="column-third">
             <div id="chart-histogram-redistributionandrestitution-landcostrestitution"
-                 data-chart-title="Land Cost in Restitution Programme in Rands (ZAR) in 2017/2018"
-                 data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
+                 data-chart-title="Land Cost in Rands (ZAR), Restitution Programme 2017/2018"
+                 data-source-link="https://africaopendata.org/dataset/redistribution-and-restitution-in-south-africa-2018/resource/487dcca4-e8ab-4aac-b7a0-9d00a9755f3a?view_id=dcc13ebb-e2e9-46b0-bbe3-505456027fae"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
